--- a/Sac/sac.html
+++ b/Sac/sac.html
@@ -76,19 +76,19 @@
     <section>
         <div>
             <div class="ContainerArticles">
-                <!-- Shorts 1 -->
+                <!-- Sac 1 -->
 
                 <div class="ComponentArticle ArticleOne">
                     <div>
                         <img
                                 src="../img/Sac/femme/Sac1/7e3867ad-6e24-41c6-9bd6-4e10e072058b.webp"
-                                alt=""
+                                alt="Sac Nike Rose"
                         />
                     </div>
                     <div class="FlexInfoActicle">
                         <div>
-                            <h3>$20.5</h3>
-                            <p>Short New Waves</p>
+                            <h3>$20.50</h3>
+                            <p>Sac Loly</p>
                         </div>
                         <div class="ContainerBV">
                             <a href="../Articles/article5/article5.html">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
 
-                <!-- Shorts 2 -->
+                <!-- Sac 2 -->
 
                 <div class="ComponentArticle ArticleTwo">
                     <div>
@@ -112,7 +112,7 @@
                         <div class="FlexInfoActicle">
                             <div>
                                 <h3>$30.95</h3>
-                                <p>Short Olympico</p>
+                                <p>Sac Or</p>
                             </div>
                             <div>
                                 <!-- Ajouter href -->
@@ -138,7 +138,7 @@
                         <div class="FlexInfoActicle">
                             <div>
                                 <h3>$180</h3>
-                                <p>Basket LB</p>
+                                <p>Louis Vuitton</p>
                             </div>
                             <div>
                                 <h4>
@@ -159,7 +159,7 @@
                         <div class="FlexInfoActicle">
                             <div>
                                 <h3>$250</h3>
-                                <p>Basket LK</p>
+                                <p>Sport Bag</p>
                             </div>
                             <div>
                                 <h4>
@@ -180,7 +180,7 @@
                         <div class="FlexInfoActicle">
                             <div>
                                 <h3>$120</h3>
-                                <p>Basket LQ</p>
+                                <p>Lazy bag</p>
                             </div>
                             <div>
                                 <h4>
@@ -201,7 +201,7 @@
                         <div class="FlexInfoActicle">
                             <div>
                                 <h3>$220</h3>
-                                <p>Basket LJ</p>
+                                <p>Supinfo Bag</p>
                             </div>
                             <div>
                                 <h4>
@@ -222,7 +222,7 @@
                         <div class="FlexInfoActicle">
                             <div>
                                 <h3>$150</h3>
-                                <p>Basket LI</p>
+                                <p>School Bag</p>
                             </div>
                             <div>
                                 <h4>
