--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                 <a href="chaussures/chaussures.html">Catégories</a>
               </li>
               <li class="BugerMenuD">
-                <a href="../../E-Commerce/ERROR/ERROR.html">Hommes</a>
+                <a href="../E-Commerce/ERROR/ERROR.html">Hommes</a>
               </li>
               <li class="BugerMenuD">
-                <a href="../../E-Commerce/ERROR/ERROR.html">Femmes</a>
+                <a href="../E-Commerce/ERROR/ERROR.html">Femmes</a>
               </li>
               <li class="BugerMenuD">
                 <a href="contact/contact.html">Contact</a>
               </li>
               <li class="BugerMenuD">
-                <a aria-label="Go to basket" href="../../E-Commerce/ERROR/ERROR.html">
+                <a aria-label="Go to basket" href="../E-Commerce/ERROR/ERROR.html">
                   <i class="fa-solid fa-bag-shopping"></i>
                 </a>
               </li>
@@ -196,7 +196,7 @@
               </div>
               <div>
                 <!-- Ajouter href -->
-                <a href="../../E-Commerce/ERROR/ERROR.html">
+                <a href="../E-Commerce/ERROR/ERROR.html">
                   Voir
                   <i class="fa-solid fa-plus"></i>
                 </a>
@@ -247,7 +247,7 @@
                 </div>
                 <div>
                   <!-- Ajouter href -->
-                  <a href="../../E-Commerce/ERROR/ERROR.html">
+                  <a href="../E-Commerce/Articles/article8/article8.html">
                     Voir
                     <i class="fa-solid fa-plus"></i>
                   </a>
@@ -299,7 +299,7 @@
         </div>
         <div>
           <h2>
-            <a class="TitleCa" href="../../E-Commerce/ERROR/ERROR.html"> Hommes </a>
+            <a class="TitleCa" href="../E-Commerce/ERROR/ERROR.html"> Hommes </a>
           </h2>
           <div>
             <a href="../E-Commerce/T-Shirt/T-shirt.html"> T-Shirt </a>
@@ -315,7 +315,7 @@
         </div>
         <div>
           <h2>
-            <a class="TitleCa" href="../../E-Commerce/ERROR/ERROR.html"> Femmes </a>
+            <a class="TitleCa" href="../E-Commerce/ERROR/ERROR.html"> Femmes </a>
           </h2>
           <div>
             <a href="../E-Commerce/T-Shirt/T-shirt.html"> T-Shirt </a>
