--- a/NavPhone/NavPhone.html
+++ b/NavPhone/NavPhone.html
@@ -30,7 +30,7 @@
           <li><a href="../../E-Commerce/ERROR/ERROR.html">Hommes</a></li>
           <li><a href="../../E-Commerce/ERROR/ERROR.html">Femmes</a></li>
           <li><a href="../../E-Commerce/chaussures/chaussures.html">Catégories</a></li>
-          <li><a href="../contact/contact.html">Contact</a></li>
+          <li><a href="../contact/Support.html">Support</a></li>
         </ul>
       </div>
     </div>
