--- a/chaussures/chaussures.html
+++ b/chaussures/chaussures.html
@@ -45,7 +45,7 @@
                         <a href="../../E-Commerce/ERROR/ERROR.html">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a  href="../contact/contact.html">Contact</a>
+                        <a  href="../contact/Support.html">Support</a>
                     </li>
                     <li class="BugerMenuD">
                         <a aria-label="Go to basket" href="../../E-Commerce/ERROR/ERROR.html">
@@ -238,10 +238,10 @@
     </section>
 </header>
 <footer>
-    <div class="FooterContact">
+    <div class="FooterSupport">
         <!-- Mettre une classe pour aligner -->
         <div>
-            <h2>Contact</h2>
+            <h2>Support</h2>
             <div>
                 <div>
                     <a href="mailto:manoah.mpah@supinfo.com">
