--- a/contact/Support.html
+++ b/contact/Support.html
@@ -17,7 +17,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
     />
-    <title>Nice - Contact</title>
+    <title>Nice - Support</title>
 </head>
 <body>
 
@@ -49,7 +49,7 @@
                         <a href="../../E-Commerce/ERROR/ERROR.html">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a  href="#">Contact</a>
+                        <a  href="#">Support</a>
                     </li>
                     <li class="BugerMenuD">
                         <a aria-label="Go to basket" href="../../E-Commerce/ERROR/ERROR.html">
@@ -70,11 +70,11 @@
 </header>
 
 <section>
-    <div class="ContainerContact">
+    <div class="ContainerSupport">
         <div class="ContainerImgC">
             <div class="ContainerForm">
                 <h1>
-                    Contact
+                    Support
                 </h1>
                 <form action="https://api.web3forms.com/submit" method="POST">
                     <input
@@ -109,10 +109,10 @@
 </section>
 
 <footer>
-    <div class="FooterContact">
+    <div class="FooterSupport">
         <!-- Mettre une classe pour aligner -->
         <div>
-            <h2>Contact</h2>
+            <h2>Support</h2>
             <div>
                 <div>
                     <a href="mailto:manoah.mpah@supinfo.com">
