--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="../E-Commerce/ERROR/ERROR.html">Femmes</a>
               </li>
               <li class="BugerMenuD">
-                <a href="contact/contact.html">Contact</a>
+                <a href="contact/Support.html">Support</a>
               </li>
               <li class="BugerMenuD">
                 <a aria-label="Go to basket" href="../E-Commerce/ERROR/ERROR.html">
@@ -260,10 +260,10 @@
     </section>
 
     <footer>
-      <div class="FooterContact">
+      <div class="FooterSupport">
         <!-- Mettre une classe pour aligner -->
         <div>
-          <h2>Contact</h2>
+          <h2>Support</h2>
           <div>
             <div>
               <a href="mailto:manoah.mpah@supinfo.com">
